--- a/webroot/scss/Base/_config.scss
+++ b/webroot/scss/Base/_config.scss
@@ -1,4 +1,6 @@
 // Global
+	$boder-radius:          true;
+
 	// colors
 	$body-bg:               #fff !default;
 	$text-color:            black !default;
