--- a/webroot/scss/style.scss
+++ b/webroot/scss/style.scss
@@ -1,6 +1,7 @@
 @import "compass";
 /****************** BASE *****************/
 @import "Base/_config.scss";
+@import "Base/_mixins.scss";
 @import "Base/_base.scss";
 @import "Base/_grid.scss";
 /****************** LAYOUT *****************/
