--- a/webroot/scss/Base/_base.scss
+++ b/webroot/scss/Base/_base.scss
@@ -3,7 +3,7 @@ body{
 	font-family: $font-family-lato!important;
 	background-color: $body-bg;
 	color: $text-color;
-	overflow: scroll!important; 
+	overflow: scroll!important;
 }
 
 .right{ float: right; }
@@ -12,6 +12,8 @@ h1,h2,h3,h4,h5{ color: $gris; }
 
 .center{ text-align: center; }
 .large{ width: 100%; }
+
+a{&:hover{text-decoration: none;}}
 
 .select-file{
 	position: relative;
