--- a/webroot/scss/Pages/_users.scss
+++ b/webroot/scss/Pages/_users.scss
@@ -1,59 +1,34 @@
 .users{
-    list-style: none;
-    padding-left: 0;
-
-    li{
-        list-style-type: none;
-    }
-
+    margin-top: 40px;
     .user{
-        border: 1px solid #cecece;
-        padding: 8px 30px 10px;
-        margin: 20px 20px 20px;
-        height: 250px;
-        width: 250px;
+        border: 2px solid #D9D9D9;
+        border-top: 4px solid #D9D9D9;
+        padding: 10px;
+        @include transition(0.4s);
+        @include border-radius(15px);
 
-        .user-stats{
-            text-align: center;
-            margin-top: -20px;
-            .user-stats-info{
-                .fa{
-                    color: $orange;
-                }
-            }
-            a{
+        .avatar img {
+            @include border-radius(50%);
+        }
+        .name{
+            margin-top: 10px;
+            a, span{
+                font-size: 18px;
                 text-decoration: none;
-                font-size: 19px;
-                font-weight: 600;
-                &:hover{
-                    @include transition(0.4s);
-                    color: $gris;
-                }
+                font-weight: 300;
+                font-family: $font-family-lato;
             }
         }
-        .avatar{
-            text-align: center;
-            width: auto;
+
+        &:hover{
+            border-top: 4px solid $orange;
         }
     }
+
+
 }
 @media(max-width: 720px){
-    .users{
-        .user{
-            height: 145px;
-        }
-        .avatar img{
-            width: 105px;
-            margin-left: -27px;
-        }
-    }
+
 }
 @media(max-width: 600px){
-    .users{
-        .user{
-            padding: 8px 20px 10px;
-            width: 415px;
-            height: 145px;
-        }
-    }
 }
