--- a/webroot/css/style.css
+++ b/webroot/css/style.css
@@ -3,44 +3,44 @@
 body {
   margin: 0;
   border: 0;
-  font-family: "Lato", sans-serif !important;
-  background-color: #fff;
+  font-family: "Source Sans Pro", sans-serif !important;
+  background-color: #E4E7E6 !important;
   color: black;
   overflow: scroll !important;
 }
 
-/* line 9, ../scss/Base/_base.scss */
+/* line 12, ../scss/Base/_base.scss */
 .right {
   float: right;
 }
 
-/* line 11, ../scss/Base/_base.scss */
+/* line 14, ../scss/Base/_base.scss */
 h1, h2, h3, h4, h5 {
   color: #808080;
 }
 
-/* line 13, ../scss/Base/_base.scss */
+/* line 16, ../scss/Base/_base.scss */
 .center {
   text-align: center;
 }
 
-/* line 14, ../scss/Base/_base.scss */
+/* line 17, ../scss/Base/_base.scss */
 .large {
   width: 100%;
 }
 
-/* line 16, ../scss/Base/_base.scss */
+/* line 19, ../scss/Base/_base.scss */
 a:hover {
   text-decoration: none;
 }
 
-/* line 18, ../scss/Base/_base.scss */
+/* line 21, ../scss/Base/_base.scss */
 .select-file {
   position: relative;
   margin-top: -40px;
 }
 
-/* line 23, ../scss/Base/_base.scss */
+/* line 26, ../scss/Base/_base.scss */
 .page-title {
   font-size: 16px;
   text-align: center;
@@ -52,7 +52,7 @@ a:hover {
   color: #1b1c1d;
 }
 
-/* line 34, ../scss/Base/_base.scss */
+/* line 37, ../scss/Base/_base.scss */
 .main-desc {
   text-align: center;
   font-size: 18px;
@@ -60,17 +60,17 @@ a:hover {
   font-weight: 300;
 }
 
-/* line 41, ../scss/Base/_base.scss */
+/* line 44, ../scss/Base/_base.scss */
 body::-webkit-scrollbar {
   width: 8px;
 }
 
-/* line 42, ../scss/Base/_base.scss */
+/* line 45, ../scss/Base/_base.scss */
 body::-webkit-scrollbar-track {
   -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
 }
 
-/* line 43, ../scss/Base/_base.scss */
+/* line 46, ../scss/Base/_base.scss */
 body::-webkit-scrollbar-thumb {
   background-color: #FF6814;
 }
@@ -2204,7 +2204,6 @@ blockquote {
   margin-top: 10px;
   color: #FF6814;
   position: absolute;
-  margin-left: 17em;
 }
 /* line 23, ../scss/Pages/_ticket.scss */
 .posts .post-title h1 i:hover {
@@ -2226,36 +2225,45 @@ blockquote {
   margin-left: 15px;
 }
 /* line 40, ../scss/Pages/_ticket.scss */
+.posts .post-author img {
+  border-radius: 50%;
+}
+/* line 44, ../scss/Pages/_ticket.scss */
 .posts .post-content {
   border-bottom: solid 1px #D9D9D9;
 }
-/* line 42, ../scss/Pages/_ticket.scss */
+/* line 46, ../scss/Pages/_ticket.scss */
 .posts .post-content p {
   margin: 10px;
   font-size: 18px;
 }
-/* line 47, ../scss/Pages/_ticket.scss */
+/* line 51, ../scss/Pages/_ticket.scss */
 .posts .post-comments {
   margin-top: 70px;
 }
 
+/* line 56, ../scss/Pages/_ticket.scss */
+.form-group {
+  margin-top: 80px;
+}
+
 @media (max-width: 600px) {
-  /* line 55, ../scss/Pages/_ticket.scss */
+  /* line 62, ../scss/Pages/_ticket.scss */
   .post-title h1 {
     font-size: 20px !important;
   }
-  /* line 58, ../scss/Pages/_ticket.scss */
+  /* line 65, ../scss/Pages/_ticket.scss */
   .post-title h1 i {
     margin-top: -2px !important;
     font-size: 32px;
   }
 
-  /* line 64, ../scss/Pages/_ticket.scss */
+  /* line 71, ../scss/Pages/_ticket.scss */
   .tickets .ticket .ticket-info .author img {
     display: none;
   }
 
-  /* line 67, ../scss/Pages/_ticket.scss */
+  /* line 74, ../scss/Pages/_ticket.scss */
   .tickets .ticket .ticket-info .author .name {
     margin-right: 0 !important;
   }
