--- a/webroot/scss/Base/_base.scss
+++ b/webroot/scss/Base/_base.scss
@@ -1,7 +1,10 @@
 body{
 	margin:0; border:0;
-	font-family: $font-family-lato!important;
-	background-color: $body-bg;
+	//font-family: $font-family-lato!important;
+	font-family: 'Source Sans Pro',sans-serif!important;
+	background-color: #E4E7E6!important;
+
+	//background-color: $body-bg;
 	color: $text-color;
 	overflow: scroll!important;
 }
